@@ -1,3 +1,4 @@
+* Fill secondary unit from product supplier
 * Remove support for Python 3.8
 * Add support for Python 3.13
 
